feat(ai): 添加AI内容安全检测功能模块
- 新增AI附件上传接口实现私有附件功能
- 实现完整的内容安全检测策略管理API接口
- 添加词库版本控制、规则管理及候选词处理功能
- 创建词库词典管理界面支持规则增删改查
- 集成违规风险分类字典与辅助工具函数
- 优化浮窗聊天组件支持内容安全检测拦截
- 更新样式表增强对话框及开关组件视觉效果